# charity-donor-outreach

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  findings.md  progress.md  pyproject.toml  task_plan.md
docs/: ARCHITECTURE.md  ASSESSMENT.md  DATA_CONTRACTS.md  DESIGN_DECISIONS.md  EVALUATION.md  MIGRATION_FROM_LEGACY.md  OPERATIONS.md  POLICY_MODEL.md  SECURITY_AND_PRIVACY.md  SKILL_LEGACY_REQUIREMENT.md
examples/: campaign.annual-fund.json  campaign.annual-fund.yaml  campaign.emergency-confirmed-match.yaml  campaign.emergency-no-match.yaml  campaign.emergency-unconfirmed-match.json  donor.single.json  donors.mock.csv  expected-output.html
mail_drafts/: ada-annual-fund.eml  dorothy-annual-fund.eml  michael-annual-fund.eml  robert-annual-fund.eml
policies/: ask_policy.yaml  campaign_claims.yaml  compliance.yaml  segmentation.yaml
references/: ask-calculation.md  campaign-messaging.md  donor-segmentation.md  input-validation.md  output-validation.md  safety-and-compliance.md  template-placeholders.md
schemas/: campaign.schema.json  donor.schema.json  generation-request.schema.json  generation-result.schema.json  run-manifest.schema.json
scripts/: calculate_ask.py  calculate_donor.py  donor_policy.py  generate_batch.py  normalize_donors.py  summarize_run.py  validate_inputs.py  validate_outputs.py  validate_repository.py
templates/: donor-letter.html  donor-letter.html.j2  donor-letter.txt  donor-letter.txt.j2
tests/: conftest.py  evaluation-rubric.md  test-cases.md  test_calculate_donor_cli.py  test_donor_policy.py  (+2 more)
(+37 files in other folders)
